[package]
authors = ["Jonathan Frankel <frankeljb@gmail.com>"]
edition = "2018"
name = "pingplotter"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
rand = "0.7"
regex = "1.3.9"
termion = "1.5.5"
tui = {version = "0.9.5", features = ["termion"]}
